--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>College Survival Guide CMS</title>
+  <meta name="description" content="The admin dashboard for the College Survival Guide">
 </head>
 
 <body>
